# MultiLauncher

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  imgui.ini  logs_latest.txt
include/: EpicScanner.hpp  Game.hpp  GameManager.hpp  GogScanner.hpp  IScanner.hpp  SteamScanner.hpp
include/MultiLauncher/: App.hpp  EpicProvider.hpp  EpicScanner.hpp  Game.hpp  GameManager.hpp  GogScanner.hpp  Gui.hpp  IScanner.hpp  Logger.hpp  PlaytimeManager.hpp  ProcessRunner.hpp  SteamScanner.hpp
src/: App.cpp  Game.cpp  Gui.cpp  main.cpp
tools/EpicBanner/: .env.example  EpicBanner.py  requirements.txt
